SFUSA/force-app/main/default/objects/POS_State_Setting__mdt/fields/Default_Text_Value__c.field-meta.xml
<CustomField>
        <fullName>Default_Text_Value__c</fullName>
        <label>Default Text Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Name</fullName>
                    <default>true</default>
                    <label>Account Name</label>
                </value>
                <value>
                    <fullName>Bottle Plate Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>