SFUSA/force-app/main/default/objects/POS_State_Setting__mdt/fields/Options__c.field-meta.xml
<CustomField>
        <fullName>Options__c</fullName>
        <label>Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Include;Don't Include</fullName>
                    <default>true</default>
                    <label>Include;Don't Include</label>
                </value>
                <value>
                    <fullName>Include;Don't Include;Insert Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>