SFUSA/force-app/main/default/objects/POS_State_Setting__mdt/fields/State__c.field-meta.xml
<CustomField>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New York</fullName>
                    <default>true</default>
                    <label>New York</label>
                </value>
                <value>
                    <fullName>Oregon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>