SFUSA/force-app/main/default/objects/POS_State_Setting__mdt/listViews/All_Details.listView-meta.xml
<ListView>
        <fullName>All_Details</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>POS_Static_Resource__c</columns>
        <columns>Show_Text_Options__c</columns>
        <columns>Default_Text_Value__c</columns>
        <columns>Premise_Type__c</columns>
        <columns>Options__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Details</label>
        <language>en_US</language>
    </ListView>