SFUSA/force-app/main/default/objects/POS_State_Setting__mdt/listViews/Cruzan.listView-meta.xml
<ListView>
        <fullName>Cruzan</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Premise_Type__c</columns>
        <columns>Default_Text_Value__c</columns>
        <columns>Options__c</columns>
        <columns>POS_Static_Resource__c</columns>
        <columns>Show_Text_Options__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>startsWith</operation>
            <value>CR</value>
        </filters>
        <label>Cruzan</label>
        <language>en_US</language>
    </ListView>