SFUSA/force-app/main/default/objects/POS_State_Setting__mdt/listViews/New_York_Off_Premise.listView-meta.xml
<ListView>
        <fullName>New_York_Off_Premise</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>POS_Static_Resource__c</columns>
        <columns>Premise_Type__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Premise_Type__c</field>
            <operation>equals</operation>
            <value>Off Premise</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>New York</value>
        </filters>
        <label>New York - Off Premise</label>
        <language>en_US</language>
    </ListView>