SFUSA/force-app/main/default/objects/POS_State_Setting__mdt/listViews/On_Premise.listView-meta.xml
<ListView>
        <fullName>On_Premise</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>POS_Static_Resource__c</columns>
        <columns>Premise_Type__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Premise_Type__c</field>
            <operation>equals</operation>
            <value>On Premise</value>
        </filters>
        <label>On Premise</label>
        <language>en_US</language>
    </ListView>